network-policy/ei-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ei-egress
spec:
  podSelector:
    matchLabels:
      app: ei
  policyTypes:
  - Egress
  egress:
    - to:
      - podSelector:
         matchLabels:
           app: nginx
      ports:
        - protocol: TCP
          port: 80
