network-policy/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-network-policy
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
  - Ingress
  ingress:
    - from:
      - podSelector:
         matchLabels:
           app: ei
      ports:
        - protocol: TCP
          port: 80
